--- a/metadata.tex
+++ b/metadata.tex
@@ -28,6 +28,7 @@
 \usepackage{hyperref}
 \usepackage[noautomatic, nonewpage]{imakeidx}
 \usepackage{multicol}
+\usepackage{multirow}
 \usepackage[super]{nth}
 \usepackage{outlines}
 \usepackage{paracol}
@@ -401,6 +402,20 @@
   \end{tikzpicture}
 }
 
+\newcommand{\darkcellleft}[2][0.9]{
+  \begin{tikzpicture}
+    \filldraw[line width=1.0pt, fill=darkcellbg, fill opacity=0.5, draw=darkcellborder] (0, 0) rectangle (\linewidth, #1);
+  %   \node[text width=\linewidth, align=left] at (current bounding box.center) {\textbf{#2}};
+  % \end{tikzpicture}
+
+    \node[text width=\linewidth, align=left] at (current bounding box.center) {
+      \leftskip=0.4em
+      \rightskip=0pt plus 1fil
+      \textbf{#2}\\
+    };
+  \end{tikzpicture}
+}
+
 \definecolor{lightcellborder}{HTML}{77543e}
 \definecolor{lightcellbg}{HTML}{20160C}
 
@@ -408,6 +423,18 @@
   \begin{tikzpicture}
     \filldraw[line width=1.0pt, fill=lightcellbg, fill opacity=0.25, draw=lightcellborder] (0, 0) rectangle (\linewidth, #1);
     \node[text width=\linewidth, align=center] at (current bounding box.center) {\color{white}#2};
+  \end{tikzpicture}
+}
+
+\newcommand{\lightcellleft}[2][0.9]{
+  \begin{tikzpicture}
+    \filldraw[line width=1.0pt, fill=lightcellbg, fill opacity=0.25, draw=lightcellborder] (0, 0) rectangle (\linewidth, #1);
+    \node[text width=\linewidth, align=left] at (current bounding box.center) {
+      \color{white}
+      \leftskip=0.4em
+      \rightskip=0pt plus 1fil
+      #2\\
+    };
   \end{tikzpicture}
 }
 
