Update translations for Inferno campaign

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -220,7 +220,7 @@ Clan Kreelah, prepare our defenses!
 Protect Kleesive at all costs.
 We have the advantage.
 
-\textbf{Enemy at the Gates}
+\textbf{Enemy at the gates}
 
 Castle and AvLee armies will be at our gates soon.
 They must come through the volcanic corridor to our east.
@@ -246,7 +246,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       & \lightcellleft[2.8]{Few Unicorns\\Pack of Pegasi\\Pack of Elves\\Pack of Dwarves\\Few Centaurs}
       & \makebox[129pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{3~×~Might \svg{might-yellow} Card\\2~×~Skill \svg{skill-yellow} Card \\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}}
       & \makebox[147pt][r]{\multirow{4}{*}[12.65ex]{\lightcellleft[11.75]{1~×~Shield~of~the Damned \textit{(Top effect)}\\1~×~Sword~of~Hellfire \textit{(Top effect)}\\\phantom{.}\\ \textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\
-      \darkcellleft[2.8]{Caslte Charging Army \#1}
+      \darkcellleft[2.8]{Castle Charging Army \#1}
       & \lightcellleft[2.8]{Few Champions\\Pack of Zealots\\Pack of Griffins\\Pack of Elves\\Pack of Marksmen}
       &
       & \\
@@ -254,7 +254,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       & \lightcellleft[2.8]{Pack of Unicorns\\Pack of Dendroids\\Few Pegasi\\Pack of Elves\\Pack of Dwarves}
       &
       & \\
-      \darkcellleft[2.8]{Caslte Charging Army \#2}
+      \darkcellleft[2.8]{Castle Charging Army \#2}
       & \lightcellleft[2.8]{Pack of Champions\\Pack of Zealots\\Few Crusaders\\Few Grifins\\Pack of Halberdiers}
       &
       & \\
