--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -63,7 +63,7 @@ This Scenario plays out over 13 Rounds.
 \begin{itemize}
   \item \textbf{Army:}
     \begin{itemize}
-      \item A Few Elves\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}
+      \item A Few Elves
       \item Neutral Army at the same Level as your Hero\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
     \end{itemize}
   \item \textbf{AI Deck:}
@@ -81,7 +81,7 @@ This Scenario plays out over 13 Rounds.
 \end{itemize}
 
 \begin{center}
-  {\transparent{0.2}\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/slayer.png}}
+  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/slayer.png}}
 \end{center}
 
 \subsection*{\MakeUppercase{Map Setup}}
