--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -59,9 +59,9 @@ This Scenario plays out over 16 Rounds.
     \end{itemize}
     \item \textbf{AI Deck:}
     \begin{itemize}
-        \item 5 × Might Card
-        \item 1 × Magic Card
-        \item 3 × Skill Card
+        \item 5 × Might \svg{might} Card
+        \item 1 × Magic \svg{magic} Card
+        \item 3 × Skill \svg{skill} Card
     \end{itemize}
     \item \textbf{Spells:}
     \begin{itemize}
@@ -79,8 +79,8 @@ This Scenario plays out over 16 Rounds.
        Neutral Army one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
     \item \textbf{AI Deck:}
     \begin{itemize}
-        \item 2 × Might Card
-        \item 2 × Magic Card
+        \item 2 × \svg{might} Might Card
+        \item 2 × \svg{magic} Magic Card
     \end{itemize}
     \item \textbf{Spells:}
     \begin{itemize}
