--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -65,9 +65,9 @@ Before the start of the Scenario, instead of performing the usual Search (2) Spe
 Deposit bombs (Grail) into the enemy Town to score Victory Points (VPs).
 The game lasts for 8 Rounds:
 \begin{itemize}
-  \item A player wins when they score 3 VPs. The Scenario ends immediately after a single player deposits their third bomb.
-  \item If no one scores 3 VPs by the end of the 8th Round, the player with the most VPs wins the Scenario.
-  \item If VPs are tied, the Scenario goes into sudden death. The first player to score a VP during the next 4 Rounds (9--12) wins the Scenario.
+  \item A player/alliance wins when they score 3 VPs. The Scenario ends immediately after a single player deposits their third bomb.
+  \item If no one scores 3 VPs by the end of the 8th Round, the player/alliance with the most VPs wins the Scenario.
+  \item If VPs are tied, the Scenario goes into sudden death. The first player/alliance to score a VP during the next 4 Rounds (9--12) wins the Scenario.
   \newpage
   \item In any other situation, the game ends in a tie between the players with the most VPs.
 \end{itemize}
@@ -89,6 +89,8 @@ During this Scenario:
 \begin{itemize}
   \item Heroes cannot attack other players' Towns unless they are carrying the bomb.
   \item Heroes cannot attack the bomb carrier from their Starting Town Field.
+  \item Heroes cannot attack bomb carrier from their Starting Town Field.
+  \item In Clash Mode with more than 2 players, the Town that was bombed most recently cannot be bombed again.
 \end{itemize}
 
 \textbf{Center Tile:}
@@ -130,7 +132,7 @@ During this Scenario:
 
 \textbf{Scoring Victory Points (VPs):}
 
-A player earns 1 VP after winning a siege or entering the enemy Town while carrying the bomb.
+A player/alliance earns 1 VP after winning a siege or entering the enemy Town while carrying the bomb.
 \begin{itemize}
   \item After such an event, the victorious Hero is moved back to their own Town, and the Grail token is returned to the Grail space in the center. If any Hero is standing on that Field when the Grail is placed, they immediately become the bomb carrier.
   \item The defending player does not lose control of their Town after losing the siege.
