--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -62,6 +62,11 @@ At the end of the \nth{12} Round, if the Dragon Utopia is not flagged by any pla
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{1} Round:}
+\begin{itemize}
+  \item All players but the first one gain +1 \svgeven{movement}.
+\end{itemize}
+
 \textbf{\nth{6} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from every Tile.
@@ -78,12 +83,18 @@ During this Scenario:
   \item Each Obelisk can only be Flagged by one Player at a time.
   \item Whenever an Obelisk is visited for the first time, the visiting player gains one Arcane Spike.
   \item At the start of each Player's turn, that Player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of Obelisks controlled by them.
-\end{itemize}
+  \item Depending on the turn order, players get:
+  \begin{itemize}
+    \item \nth{1} - \svg{morale_negative} Token (-1 hand size for Necropolis)
+    \item \nth{2} - no morale
+    \item \nth{3} and higher - \svg{morale_positive} Token (+1 hand size for Necropolis)
+  \end{itemize}
+  \item If playing in Alliance Mode, add a Gold Unit for each extra team member to the Dragon Utopia fight (+1 when 2-people teams, +2 when 3-people teams).\end{itemize}
 
 \vspace{3em}
 
 \begin{center}
-  \transparent{0.4}{\includegraphics[width=0.9\linewidth, keepaspectratio]{\art/shield.png}}
+  \transparent{0.4}{\includegraphics[width=0.5\linewidth, keepaspectratio]{\art/shield.png}}
 \end{center}
 
 \textbf{Players can spend one Arcane Spike during combat to cast:}
@@ -92,7 +103,7 @@ During this Scenario:
   \begin{tabularx}{0.95\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
     \lightcell[1.8]{\svg{activation-table} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\
-    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
+    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated \\ and suffers -1 \svg{defense_yellow} for every Arcane Spike (Cube) on it} \\
   \end{tabularx}
 }
 
