Update CS layout and restore commented out campaign

--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -12,14 +12,14 @@
 
 \input{\campaignspath/inferno_deal_with_the_devil.tex}
 
-% \clearpage
-%
-% \input{\campaignspath/castle_greek_gift.tex}
-%
-% \clearpage
-%
-% \input{\campaignspath/castle_sicilian_dragon.tex}
-%
-% \clearpage
-%
-% \input{\campaignspath/castle_two_knights_defense.tex}
+\clearpage
+
+\input{\campaignspath/castle_greek_gift.tex}
+
+\clearpage
+
+\input{\campaignspath/castle_sicilian_dragon.tex}
+
+\clearpage
+
+\input{\campaignspath/castle_two_knights_defense.tex}
