Update Inferno campaign layout (#178)
Co-authored-by: github-actions <github-actions@github.com>

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -46,25 +46,47 @@ This Scenario plays out over 16 Rounds.
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
-\textbf{Faction:} Castle
+\textbf{General Kendal (Castle):}
+\begin{itemize}
+    \item \textbf{Army:}
+    \begin{itemize}
+        \item A Pack of Archangels
+        \item A Pack of Champions
+        \item A Pack of Zealots
+        \item A Pack of Crusaders
+        \item A Pack of Griffins
+        \item A Balista War Machine
+    \end{itemize}
+    \item \textbf{AI Deck:}
+    \begin{itemize}
+        \item 5 × Might \svg{might} Card
+        \item 1 × Magic \svg{magic} Card
+        \item 3 × Skill \svg{skill} Card
+    \end{itemize}
+    \item \textbf{Spells:}
+    \begin{itemize}
+        \item 2 × Haste
+    \end{itemize}
+    \item \textbf{Abilities:}
+    \begin{itemize}
+        \item Artillery\footnote{For General Kendal, the Artillery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}
+    \end{itemize}
+\end{itemize}
 
-\textbf{Enemies:} General Kendal, Charging Heroes
-
-\textbf{General Kendal's Army:} A Pack of Archangels, a Pack of Champions, a Pack of Zealots, a Pack of Crusaders, a Pack of Griffins, a Balista War Machine
-
-\textbf{General Kendal's Deck:} 5 × Might Card, 1 × Magic Card, 3 × Skill Card
-
-\textbf{General Kendal's Spell Deck:} 2 × Haste Spell Card
-
-\textbf{General Kendal's Skill:} Artillery Ability Card\footnote{For General Kendal, the Artilery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}
-
-\textbf{Charging Heroes' Factions:} Rampart, Tower, Castle
-
-\textbf{Charging Heroes' Armies:} Neutral Army is one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}.
-
-\textbf{Charging Heroes' Deck:} 2 × Might Card, 2 × Magic Card
-
-\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell Card\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.
+\textbf{Charging Heroes (Rampart, Tower, Castle):}
+\begin{itemize}
+    \item \textbf{Army:}
+       Neutral Army one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
+    \item \textbf{AI Deck:}
+    \begin{itemize}
+        \item 2 × \svg{might} Might Card
+        \item 2 × \svg{magic} Magic Card
+    \end{itemize}
+    \item \textbf{Spells:}
+    \begin{itemize}
+        \item 2 × Slow\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}
+    \end{itemize}
+\end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -95,11 +117,11 @@ Take the following Map Tiles and set them up as shown in the Scenario map layout
 
 \subsection*{\MakeUppercase{Heroes Placement}}
 
-The Enemy Hero General Kendal is represented by one Castle Faction Hero model and appears on the center Field of the S3 Starting Map Tile.
+The Enemy Hero General Kendal is represented by a Castle Faction Hero model and appears on the center Field of the S3 Starting Map Tile.
 
-The Castle Charging Hero is represented by one Castle Faction Hero model and appears on (and owns) the Settlement of the F3 Map Tile.
+The Castle Charging Hero is represented by a Castle Faction Hero model and appears on (and owns) the Settlement of the F3 Map Tile.
 
-The Rampart Charging Hero is represented by one Rampart Faction Hero model and appears on (and owns) the Settlement of the F10 Map Tile.
+The Rampart Charging Hero is represented by a Rampart Faction Hero model and appears on (and owns) the Settlement of the F10 Map Tile.
 
 The Tower Charging Hero is represented by one Tower Faction Hero model and appears on (and owns) the Settlement of the \#F1 Map Tile.
 
@@ -109,42 +131,32 @@ Place your Secondary Hero, represented by one Dungeon Faction Hero model of your
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Defeat all 3 Enemy Controlled Settlements (F3, F10, \#F1), and capture Steadwick (S3) before
-Queen Catherine Ironfist arrives at the end of the Round 16.
+Capture all Enemy Settlements (F3, F10, \#F1) and Steadwick (S3) before Queen Catherine Ironfist arrives at the end of Round 16.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-You lose one Combat encounter with your Main Hero (Surrendering costs 10 \svg{gold}, and does not count as a defeat).
-
-You lose your Faction Town on the S6 Map Tile.
-
-You run out of time -- you have time till the end of the Round 16.
+You lose if any of the following occur:
+\begin{itemize}
+  \item You lose one Combat encounter with your Main Hero (Surrendering costs 10 \svg{gold}, and does not count as a defeat).
+  \item You lose your Faction Town on the S6 Map Tile.
+  \item You run out of time -- you have time till the end of Round 16.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item Read: ``You are to be congratulated on your progress so far.
-    You have laid waste to Eastern Erathia, and are now within striking distance of the Erathian
-    capital of Steadwick. You must capture the capital quickly!''
+  \item Read ``Congratulations'' section.
 \end{itemize}
 
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Read: ``Not only have Bracada and AvLee sent reinforcements, but we have received news that
-    Queen Catherine Ironfist is marching a sizeable army from the south. We must control the capital and its
-    garrisons before she arrives.
-
-    You have just received a report on the progress of Queen Catherine.
-    Forces from Nighon and Eeofol are attempting to delay her march to Steadwick,
-    but doubt that they can delay her more than two or three months.''
+  \item Read ``News'' section.
 \end{itemize}
 
 \textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Read: ``You receive a report from the south. Queen Catherine's forces have been sufficiently delayed,
-    allowing you at least two months more to reach the capitol, but our own forces have suffered significant
-    losses. Do not let their sacrifice go to waste.''
+  \item Read: ``First Report'' section.
 \end{itemize}
 
 \textbf{\nth{10} Round:}
@@ -155,28 +167,22 @@ You run out of time -- you have time till the end of the Round 16.
 
 \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item Read: ``You receive a report from the south. Our forces continue to throw themselves in the path of
-    Queen Catherine's armies, yet she continues to march northward. You have, at most, three or four weeks
-    before she can reach the capital.''
+  \item Read ``Second Report'' section.
 \end{itemize}
 
 \textbf{\nth{13} Round:}
 \begin{itemize}
-  \item Warning: ``Queen Catherine's march continues -- her forces are just two weeks away. If you do not hurry,
-    we will not have time to secure the capital before her arrival.''
+  \item Read ``First Warning'' section.
 \end{itemize}
 
 \textbf{\nth{15} Round:}
 \begin{itemize}
-  \item Warning: ``Your scouts report sighting Queen Catherine's army seven days to the southwest. If she
-    reaches the capitol before you, all is lost.''
+  \item Read ``Second Warning'' section.
 \end{itemize}
 
 \textbf{\nth{16} Round:}
 \begin{itemize}
-  \item If Steadwick has not been taken, read: ``This morning, a massive army lead by Queen Catherine
-    Ironfist arrived at the Erathian capitol of Steadwick. We have no choice but to retreat our forces.
-    You have failed us... miserably.''
+  \item Read ``The Ending'' section \textbf{at the end of the Round}.
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
@@ -189,27 +195,65 @@ You run out of time -- you have time till the end of the Round 16.
 During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
-    \item The General Kendal Hero does not move and only waits in their Town. They start with Walls, a Gate,
-      and an Arrow Tower on their side of the Combat Board.
+    \item General Kendal does not move and only waits in his Town. He start with Walls, Gate,
+      and Arrow Tower on his side of the Combat Board.
     \item The difficulty Level of every Combat encounter on the map increases by one till the end of the Scenario
       (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
     \item The Enemy Charging Heroes have only 2 Movement Points, instead of 3. They ignore everything else
       (including Mines and Settlements if possible) and go straight for the player's Faction Town (on Map Tile S6).
       They do not pursue the player directly, but if they happen to be on the same Map Tile, they will
       attack the player's Main Hero (not Secondary).
-    \item The Enemy Charging Heroes move after the player's Turn ends.
     \item The borders on the Castle Starting Map Tile S3 cannot be crossed by any means until
       all Enemy Settlements (F3, F10, \#F1) have been defeated.
-    \item Defeating Enemy Charging Heroes provides 2 \svg{valuables}.
-    \item Obelisks give you 1 \svg{valuables} and function as a ``Castle
-      Gate'' location (only if you have the ``Castle Gate'' built in your Town).
+    \item Gain 2 \svg{valuables} every time you defeat Enemy Charging Heroes.
+    \item Obelisks give you 1 \svg{valuables} and function as a ``Castle Gate'' location (only if you have the ``Castle Gate'' built in your Town).
 \end{itemize}
 
-\vspace*{\fill}
-\begin{center}
-  \framedimage[0.9\linewidth]{\art/demon.jpg}
-\end{center}
-\vspace*{\fill}
+\subsection*{\MakeUppercase{The Story}}
+
+\textbf{Congratulations}
+
+You are to be congratulated on your progress so far.
+You have laid waste to Eastern Erathia, and are now within striking distance of the Erathian capital of Steadwick.
+You must capture the capital quickly!
+
+\textbf{News}
+
+Not only have Bracada and AvLee sent reinforcements, but we have received news that Queen Catherine Ironfist is marching a sizeable army from the south.
+We must control the capital and its garrisons before she arrives.
+
+You have just received a report on the progress of Queen Catherine.
+Forces from Nighon and Eeofol are attempting to delay her march to Steadwick, but doubt that they can delay her more than two or three months.
+
+\textbf{First Report}
+
+You receive a report from the south.
+Queen Catherine's forces have been sufficiently delayed, allowing you at least two months more to reach the capitol, but our own forces have suffered significant losses.
+Do not let their sacrifice go to waste.
+
+\textbf{Second Report}
+
+You receive a report from the south.
+Our forces continue to throw themselves in the path of Queen Catherine's armies, yet she continues to march northward.
+You have, at most, three or four weeks before she can reach the capital.
+
+\textbf{First Warning}
+
+Queen Catherine's march continues -- her forces are just two weeks away.
+If you do not hurry, we will not have time to secure the capital before her arrival.
+
+\textbf{Second Warning}
+
+Your scouts report sighting Queen Catherine's army seven days to the southwest.
+If she reaches the capitol before you, all is lost.
+
+\textbf{The Ending}
+
+This morning, a massive army lead by Queen Catherine Ironfist arrived at the Erathian capitol of Steadwick.
+We have no choice but to retreat our forces.
+You have failed us... miserably.
+
+\textcolor{darkcandyapplered}{If Steadwick has not been captured, the Scenario is lost!}
 
 \end{multicols*}
 
