--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -85,11 +85,11 @@ During this Scenario:
   \item At the start of each Player's turn, that Player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of Obelisks controlled by them.
   \item Depending on the turn order, players get:
   \begin{itemize}
-    \item \nth{1} - \svg{morale_negative} Token (-1 hand size for Necropolis)
+    \item \nth{1} - \svg{morale_negative} Token (for Necropolis, -1 hand size  this turn)
     \item \nth{2} - no morale
-    \item \nth{3} and higher - \svg{morale_positive} Token (+1 hand size for Necropolis)
+    \item \nth{3} and higher - \svg{morale_positive} Token (for Necropolis, +1 hand size this turn)
   \end{itemize}
-  \item If playing in Alliance Mode, add a Gold Unit for each extra team member to the Dragon Utopia fight (+1 when 2-people teams, +2 when 3-people teams).\end{itemize}
+  \item If playing in Alliance Mode, add a Gold Unit for each extra alliance member to the Dragon Utopia fight (+1 when 2-people teams, +2 when 3-people teams).\end{itemize}
 
 \vspace{3em}
 
@@ -103,7 +103,7 @@ During this Scenario:
   \begin{tabularx}{0.95\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
     \lightcell[1.8]{\svg{activation-table} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\
-    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated \\ and suffers -1 \svg{defense_yellow} for every Arcane Spike (Cube) on it} \\
+    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated \\ and suffers -1 \svg{defense_yellow} for every Arcane Spike on it} \\
   \end{tabularx}
 }
 
