--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -65,7 +65,7 @@ Before the start of the Scenario, instead of performing the usual Search (2) Spe
 Deposit bombs (Grail) into the enemy Town to score Victory Points (VPs).
 The game lasts for 8 Rounds:
 \begin{itemize}
-  \item A player/alliance wins when they score 3 VPs. The Scenario ends immediately after a single player deposits their third bomb.
+  \item A player/alliance wins when they score 3 VPs. The Scenario ends immediately after a single player/alliance deposits their third bomb.
   \item If no one scores 3 VPs by the end of the 8th Round, the player/alliance with the most VPs wins the Scenario.
   \item If VPs are tied, the Scenario goes into sudden death. The first player/alliance to score a VP during the next 4 Rounds (9--12) wins the Scenario.
   \newpage
@@ -89,7 +89,6 @@ During this Scenario:
 \begin{itemize}
   \item Heroes cannot attack other players' Towns unless they are carrying the bomb.
   \item Heroes cannot attack the bomb carrier from their Starting Town Field.
-  \item Heroes cannot attack bomb carrier from their Starting Town Field.
   \item In Clash Mode with more than 2 players, the Town that was bombed most recently cannot be bombed again.
 \end{itemize}
 
