--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -37,10 +37,6 @@ After players prepare their starting M\&M Decks, it is recommended to remove Mag
 
 When distributing Far Tiles (II--III) between players, each player's pool of Map Tiles must include one Settlement.
 
-\includegraphics[width=\linewidth]{\art/rogue.jpg}
-
-\includegraphics[width=\linewidth]{\art/medusa.jpg}
-
 \subsection*{Round One Mulligan}
 
 At the start of the \nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.
@@ -50,9 +46,11 @@ At the start of the \nth{1} Round, each player may reshuffle their hand of Cards
 Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.
 For example, a Level VII Combat on Hard will be against 2 × \svgunit{azure} Neutral Units.
 
-\begin{center}
-  \transparent{0.3}{\includegraphics[width=\linewidth]{\art/black_market.png}}
-\end{center}
+{
+  \hfill
+  \transparent{0.2}{\includegraphics[width=0.8\linewidth]{\art/black_market.png}}
+  \vspace{-3em}
+}
 
 \subsection*{Trading Post}
 
