--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -921,7 +921,7 @@ msgstr ""
 "      & \\lightcellleft[2.8]{Grupa Czempionów\\\\Grupa Kapłanów\\\\Garstka Krzyżowców\\\\Garstka Gryfów\\\\Grupa Halabardników}\n"
 "      &\n"
 "      & \\\\\n"
-"      \\darkcellleft[4.4]{Ostateczna Szarżująca Armia}\n"
+"      \\darkcellleft[4.4]{Ostatnia Szarżująca Armia}\n"
 "      & \\lightcellleft[4.4]{Garstka Archaniołów\\\\Grupa Jednorożców\\\\Grupa Czempionów\\\\Grupa Kapłanów\\\\Grupa Gryfów\\\\Machina Wojenna Balista}\n"
 "      & \\lightcellleft[4.4]{3~×~Karta Mocy \\svg{might-yellow}\\\\3~×~Karta Umiejętności \\svg{skill-yellow}}\n"
 "    & \\lightcellleft[4.4]{1~×~Tarcza Potępionych \\textit{(Górny efekt)}\\\\1~×~Miecz Ognia Piekielnego \\textit{(Górny efekt)}\\\\1~×~Balistyka \\textit{(Efekt Podstawowy)}\\\\1~×~Pierwsza Pomoc \\textit{(Efekt Mistrzowski)}} \\\\ \\end{tabularx}\n"
